# WeatherModels

./: .gitignore  README.md  pyproject.toml
configs/: eval_config.yaml  fine_tune.yaml  resnet_config.yaml
scripts/: eval.py  launch_mlflow.sh  rollout_finetune.py  train.py
src/tyndall/: __init__.py  data.py  layers.py  losses.py  metrics.py  model_utils.py  models.py  train_utils.py  training.py  utils.py
